--- a/Kevin20250324.AppWebMVC/appsettings.json
+++ b/Kevin20250324.AppWebMVC/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Conn": "Data Source=M05-CII;Initial Catalog=Test20250324DB;Integrated Security=True;Encrypt=False"
+  }
+
 }
