instalacion de paqute nuget

--- a/Kevin20250324.AppWebMVC/appsettings.json
+++ b/Kevin20250324.AppWebMVC/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Conn": "Data Source=M05-CII;Initial Catalog=Test20250324DB;Integrated Security=True;Encrypt=False"
+    "Conn": "Data Source=.;Initial Catalog=Practica04032025DataFirst;Integrated Security=True;Encrypt=False"
   }
 
 }
